using corner values instead of side values

--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -33,7 +33,7 @@
 }
 
 @mixin rounded-rectangle {
-  border-radius: side-values(20px 0 20px 20px) !important;
+  border-radius: corner-values(20px 0 20px 20px) !important;
   @include box-shadow;
 }
 
