--- a/scss/layouts/setting/_reset-password.scss
+++ b/scss/layouts/setting/_reset-password.scss
@@ -1,6 +1,6 @@
 .ResetPassword-container{
   .form-control {
-    border-radius: side-values(20px 0 20px 20px) !important;
+    border-radius: corner-values(20px 0 20px 20px) !important;
     border: none;
     background: $light-gray;
     height: 55px;
@@ -13,7 +13,7 @@
   }
   .content-password{
     box-shadow: 0px 18px 8px 0px rgba(0, 0, 0, 0.04);
-    border-radius: side-values(0 0 20px 20px);
+    border-radius: corner-values(0 0 20px 20px);
     background: $white;
     padding: side-values(0 20px 20px 20px);
     margin-bottom: 51px;
@@ -42,14 +42,14 @@
     .btn-light{
       height: 55px;
       background-color: $light-gray;
-      border-radius: side-values(0 0 0 20px) !important;
+      border-radius: corner-values(0 0 0 20px) !important;
     }
     .btn-secondary{
       height: 55px;
       color: white;
       text-align: $right;
       background-color: $brand-color;
-      border-radius: side-values(0px 20px 20px 0px) !important;
+      border-radius: corner-values(0px 20px 20px 0px) !important;
       margin-#{$left}: 10px;
       p{
         font-family: Roboto;
