--- a/scss/state/checkout/_checkout-payment.scss
+++ b/scss/state/checkout/_checkout-payment.scss
@@ -128,7 +128,7 @@
       .payment-container{
         .payment-box{
           margin-bottom: 5px;
-          padding: corner-values(10px);
+          padding: side-values(10px);
           padding-bottom: 50px;
           label{
             margin-bottom: 0px;
