--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -23,7 +23,7 @@ color: $basic-gray;
   margin-bottom: 0;
 }
 .div-border-radius{
-  border-radius: side-values(20px 0 20px 20px) !important;
+  border-radius: corner-values(20px 0 20px 20px) !important;
 }
 .box-shadow{
   box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
