--- a/scss/layouts/_apps-link.scss
+++ b/scss/layouts/_apps-link.scss
@@ -8,7 +8,7 @@
     position: relative;
     background: $brand-color;
     height: 143px;
-    border-radius: side-values(0 20px 20px 20px) !important;
+    border-radius: corner-values(0 20px 20px 20px) !important;
     text-align: left;
 
     h3 {
