--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -179,7 +179,7 @@
       margin-top: 20px !important;
     };
     > span{
-      border-radius: side-values(0 0 $border-radius-base $border-radius-base);
+      border-radius: corner-values(0 0 $border-radius-base $border-radius-base);
       display: inline-block;
       background: $white;
       padding: 5px 11px;
