--- a/scss/layouts/_garage-popup.scss
+++ b/scss/layouts/_garage-popup.scss
@@ -72,7 +72,7 @@
       margin-top: 22px;
       //save button
       .btn-primary {
-        border-radius: side-values(0px 20px 20px 20px) !important;
+        border-radius: corner-values(0px 20px 20px 20px) !important;
         border-style: none;
         background: $brand-color;
         width: 57px;
@@ -202,7 +202,7 @@
   }
   .garage-content {
     .btn-primary {
-      border-radius: side-values(0px 20px 20px 20px) !important;
+      border-radius: corner-values(0px 20px 20px 20px) !important;
       border-style: none;
       background: $brand-color;
       width: 57px;
