--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -124,7 +124,7 @@
   }
   .dropdown-menu{
     overflow: hidden;
-    border-radius: side-values(0px 0px $border-radius-base $border-radius-base);
+    border-radius: corner-values(0px 0px $border-radius-base $border-radius-base);
     #{$left}: auto !important;
     #{$right}: 0 !important;
     top: 15px !important;
@@ -197,7 +197,7 @@
             padding-top: 7px;
             @extend .btn-primary;
             white-space: nowrap;
-            border-radius: side-values(0 0 0 $border-radius-base) !important;
+            border-radius: corner-values(0 0 0 $border-radius-base) !important;
             @extend .text-capitalize;
             @include font-size(18px);
             i{
@@ -212,7 +212,7 @@
         &:last-child{
           margin-#{$right}: 0;
           a{
-            border-radius: side-values(0 0 $border-radius-base 0);
+            border-radius: corner-values(0 0 $border-radius-base 0);
 
           }
         }
