--- a/scss/layouts/authentication/_confirm-signup.scss
+++ b/scss/layouts/authentication/_confirm-signup.scss
@@ -66,7 +66,7 @@
         background: linear-gradient(to top, #f9f9f9, $white);
         text-transform: none;
         color: black;
-        border-radius: side-values(20px 20px 0px 20px) !important;
+        border-radius: corner-values(20px 20px 0px 20px) !important;
         span{
           width: 90px;
           text-align: left;
@@ -81,7 +81,7 @@
       color: black;
       margin-right: 4px;
       margin-bottom: 216px;
-      border-radius: side-values(0px 0px 0px 20px) !important;
+      border-radius: corner-values(0px 0px 0px 20px) !important;
     }
      .btn-open-G{
       border-style: none;
@@ -90,7 +90,7 @@
       background: $brand-color;
       text-transform: none;
       color: white;
-      border-radius: side-values(0px 20px 20px 0px) !important;
+      border-radius: corner-values(0px 20px 20px 0px) !important;
       margin-bottom: 170px;
       i{
         margin-#{$left}: 10px;
@@ -148,7 +148,7 @@
      @include font-size(20px);
      background: $white;
      color: black;
-     border-radius: side-values(0px 20px 20px 20px) !important;
+     border-radius: corner-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
      @include box-shadow;
    }
@@ -160,7 +160,7 @@
      @include font-size(20px);
      background: $brand-color;
      color: white;
-     border-radius: side-values(0px 20px 20px 20px) !important;
+     border-radius: corner-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
      margin-bottom: 150px;
      @include box-shadow;
@@ -196,7 +196,7 @@
        background: $white;
        text-transform: none;
        color: black;
-       border-radius: side-values(20px 20px 0px 20px) !important;
+       border-radius: corner-values(20px 20px 0px 20px) !important;
        span{
          width: 90px;
 
