--- a/scss/layouts/authentication/_email-verification.scss
+++ b/scss/layouts/authentication/_email-verification.scss
@@ -4,7 +4,7 @@
     text-align: center;
     align-items: baseline;
     background-color: #d1ecf1;
-    border-radius: side-values(20px 0px 20px 20px) !important;
+    border-radius: corner-values(20px 0px 20px 20px) !important;
     padding-top: 10px;
     margin-#{$left}: 138px;
     margin-#{$right}: 138px;
@@ -47,7 +47,7 @@
       text-transform: none;
       color: $brand-color;
       margin-right: 4px;
-      border-radius: side-values(0px 0px 0px 20px) !important;
+      border-radius: corner-values(0px 0px 0px 20px) !important;
     }
      .btn-open-G{
      @include font-size(13px);
@@ -56,7 +56,7 @@
       background: $white;
       color: $brand-color;
       text-transform: none;
-      border-radius: side-values(0px 20px 20px 0px) !important;
+      border-radius: corner-values(0px 20px 20px 0px) !important;
       i{
         margin-#{$left}: 10px;
       }
