--- a/scss/layouts/authentication/_forgot-password.scss
+++ b/scss/layouts/authentication/_forgot-password.scss
@@ -30,7 +30,7 @@
           border: none;
           width: 0px;
           height: 55px;
-          border-radius: side-values(20px 0px 20px 20px) !important;
+          border-radius: corner-values(20px 0px 20px 20px) !important;
           @include box-shadow;
           input {
             justify-content: center;
@@ -96,7 +96,7 @@
      @include margin-left(5px);
      background: $brand-color;
      color: white;
-     border-radius: side-values(0px 20px 20px 20px) !important;
+     border-radius: corner-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
      @include box-shadow;
      i{
@@ -130,7 +130,7 @@
         background: linear-gradient(to top, #f9f9f9, $white);
         text-transform: none;
         color: black;
-        border-radius: side-values(20px 20px 0px 20px) !important;
+        border-radius: corner-values(20px 20px 0px 20px) !important;
         span{
           width: 90px;
           text-align: left;
@@ -188,7 +188,7 @@
           background: $white;
           text-transform: none;
           color: black;
-          border-radius: side-values(20px 0px 20px 20px) !important;
+          border-radius: corner-values(20px 0px 20px 20px) !important;
 
         }
         label {
@@ -214,7 +214,7 @@
      @include font-size(20px);
      background: $brand-color;
      color: white;
-     border-radius: side-values(0px 20px 20px 20px) !important;
+     border-radius: corner-values(0px 20px 20px 20px) !important;
      margin-top: 22px;
      @include box-shadow;
      i{
