--- a/scss/layouts/setting/_profile.scss
+++ b/scss/layouts/setting/_profile.scss
@@ -6,7 +6,7 @@
         height: 55px;
         background: $white;
         text-transform: none;
-        border-radius: side-values(20px 0px 0px 0px) !important;
+        border-radius: corner-values(20px 0px 0px 0px) !important;
         padding: side-values(18px 0px 20px 20px) !important;
         margin-bottom: 3px;
         p{
@@ -30,7 +30,7 @@
           .div-last-rounded {
             display: inline-block;
             .form-control {
-              border-radius: side-values(0 0 20px 0) !important;
+              border-radius: corner-values(0 0 20px 0) !important;
               border: none;
               background: $light-gray;
               padding: inherit;
@@ -71,10 +71,10 @@
         .Profile-info-box_item{
           .first-Name{
             .form-control{
-              border-radius: side-values(20px 0 0 20px) !important;
+              border-radius: corner-values(20px 0 0 20px) !important;
             }
             .RenderField{
-              border-radius: side-values(20px 0 0 20px) !important;
+              border-radius: corner-values(20px 0 0 20px) !important;
               input{
                 margin-bottom: 0px;
               }
@@ -85,10 +85,10 @@
           }
           .last-name{
             .form-control{
-              border-radius: side-values(0 0 20px 0) !important;
+              border-radius: corner-values(0 0 20px 0) !important;
             }
             .RenderField{
-              border-radius: side-values(0 0 20px 0) !important;
+              border-radius: corner-values(0 0 20px 0) !important;
               margin-left: -13px;
               width: 100%;
               input{
@@ -130,7 +130,7 @@
               height: 55px;
               border-radius: 0px;
               background-color: #f7f7f7;
-              border-radius: side-values(20px 0 20px 20px) !important;
+              border-radius: corner-values(20px 0 20px 20px) !important;
               position: relative !important;
             }
             .select__control{
@@ -158,7 +158,7 @@
               .first{
                 margin-#{$right}: 5px;
                 .form-control{
-                  border-radius: side-values(20px 0 0 20px) !important;
+                  border-radius: corner-values(20px 0 0 20px) !important;
                   width: 70px;
                   text-align: center;
                 }
@@ -187,7 +187,7 @@
                 }
               }
               .form-control {
-                border-radius: side-values(0 0 20px 0) !important;
+                border-radius: corner-values(0 0 20px 0) !important;
                 border: none;
                 background: $light-gray;
                 height: 55px;
@@ -230,7 +230,7 @@
         .form-control{
           border: none;
           background: $light-gray;
-          border-radius: side-values(20px 0 20px 20px) !important;
+          border-radius: corner-values(20px 0 20px 20px) !important;
           width: 98%;
           margin-bottom: 15px;
           sub,
@@ -300,7 +300,7 @@
             width: 98%;
             height: 55px;
             background-color: #f7f7f7;
-            border-radius: side-values(20px 0 20px 20px) !important;
+            border-radius: corner-values(20px 0 20px 20px) !important;
             position: relative !important;
             .select__menu{
               margin-#{$left}: -10px;
@@ -353,7 +353,7 @@
       .Profile-email-box_item{
         background: white;
         padding: side-values(18px 0px 20px 20px) !important;
-        border-radius: side-values(0 0 0 20px) !important;
+        border-radius: corner-values(0 0 0 20px) !important;
         .email-check{
           label{
             margin-bottom: 0px;
@@ -386,7 +386,7 @@
         width: 90px;
         height: 50px;
         background: $white;
-        border-radius: side-values(0 0 0 20px) !important;
+        border-radius: corner-values(0 0 0 20px) !important;
         margin-#{$right}: 10px;
         p{
           font-family: Roboto;
@@ -404,7 +404,7 @@
         background: $brand-color;
         color: $white;
         text-align: $right;
-        border-radius: side-values(0 20px 20px 0) !important;
+        border-radius: corner-values(0 20px 20px 0) !important;
         p{
           font-family: Roboto;
           font-size: 20px;
@@ -435,7 +435,7 @@
         height: 55px;
         background: $white;
         text-transform: none;
-        border-radius: side-values(20px 0px 0px 0px) !important;
+        border-radius: corner-values(20px 0px 0px 0px) !important;
         padding: side-values(18px 0px 20px 20px) !important;
         margin-bottom: 3px;
         p{
@@ -461,7 +461,7 @@
             display: inline-block;
             padding: 0px;
             .form-control {
-              border-radius: side-values(20px 0 20px 20px) !important;
+              border-radius: corner-values(20px 0 20px 20px) !important;
               border: none;
               background: $light-gray;
               padding: inherit;
@@ -503,10 +503,10 @@
           .first-Name{
             margin-bottom: 20px;
             .form-control{
-              border-radius: side-values(20px 0 20px 20px) !important;
+              border-radius: corner-values(20px 0 20px 20px) !important;
             }
             .RenderField{
-              border-radius: side-values(20px 0 20px 20px) !important;
+              border-radius: corner-values(20px 0 20px 20px) !important;
               input{
                 margin-bottom: 0px;
               }
@@ -517,10 +517,10 @@
           }
           .last-name{
             .form-control{
-              border-radius: side-values(20px 0 20px 20px) !important;
+              border-radius: corner-values(20px 0 20px 20px) !important;
             }
             .RenderField{
-              border-radius: side-values(20px 0 20px 20px) !important;
+              border-radius: corner-values(20px 0 20px 20px) !important;
               width: 100%;
               input{
                 margin-bottom: 0px;
@@ -561,7 +561,7 @@
               height: 55px;
               border-radius: 0px;
               background-color: #f7f7f7;
-              border-radius: side-values(20px 0 20px 20px) !important;
+              border-radius: corner-values(20px 0 20px 20px) !important;
               position: relative !important;
             }
             .select__control{
@@ -573,7 +573,7 @@
             .first{
               padding: 0px;
               .form-control{
-                border-radius: side-values(20px 0 0 20px) !important;
+                border-radius: corner-values(20px 0 0 20px) !important;
                 width: 100px;
                 text-align: center;
                 padding: 0px;
@@ -584,7 +584,7 @@
               @include padding-right(5px);
             }
             .form-control {
-              border-radius: side-values(0 0 20px 0) !important;
+              border-radius: corner-values(0 0 20px 0) !important;
               border: none;
               background: $light-gray;
               height: 55px;
@@ -628,7 +628,7 @@
           border: none;
           height: 55px;
           background: $light-gray;
-          border-radius: side-values(20px 0 20px 20px) !important;
+          border-radius: corner-values(20px 0 20px 20px) !important;
           margin-bottom: 15px;
           sub,
           br {
@@ -698,7 +698,7 @@
             width: 100%;
             height: 55px;
             background-color: #f7f7f7;
-            border-radius: side-values(20px 0 20px 20px) !important;
+            border-radius: corner-values(20px 0 20px 20px) !important;
             position: relative !important;
           }
           .select__control{
@@ -749,7 +749,7 @@
       .Profile-email-box_item{
         background: white;
         padding: side-values(20px 20px 20px 10px)!important;
-        border-radius: side-values(0 0 0 20px) !important;
+        border-radius: corner-values(0 0 0 20px) !important;
         .email-check{
           label{
             margin-bottom: 0px;
@@ -778,7 +778,7 @@
         width: 90px;
         height: 50px;
         background: $white;
-        border-radius: side-values(0 0 0 20px) !important;
+        border-radius: corner-values(0 0 0 20px) !important;
         margin-#{$right}: 10px;
         p{
           font-family: Roboto;
@@ -795,7 +795,7 @@
         background: $brand-color;
         color: $white;
         text-align: $right;
-        border-radius: side-values(0 20px 20px 0) !important;
+        border-radius: corner-values(0 20px 20px 0) !important;
         p{
           font-family: Roboto;
           font-size: 20px;
