--- a/scss/modules/_dialog.scss
+++ b/scss/modules/_dialog.scss
@@ -1,5 +1,5 @@
 .modal-dialog {
-  border-radius: side-values(20px 0 20px 20px) !important;
+  border-radius: corner-values(20px 0 20px 20px) !important;
   // max-width: $max-container-popup;
   .modal-content {
     @include container-fluid;
