--- a/scss/state/checkout/_cart.scss
+++ b/scss/state/checkout/_cart.scss
@@ -140,11 +140,11 @@
     }
   }
   .select__control{
-    padding: corner-values(10px 20px 13px 70px);
+    padding: side-values(10px 20px 13px 70px);
     background: rgba(0, 0, 0, 0.6);
     @include border-radius-div;
     @include media-breakpoint-down(md){
-      padding: corner-values(8px 10px 10px 60px);
+      padding: side-values(8px 10px 10px 60px);
     };
   }
   .select__single-value{
