finished the quoation order page

--- a/scss/layouts/_quotation-request.scss
+++ b/scss/layouts/_quotation-request.scss
@@ -41,6 +41,7 @@
 }
 
 #custom-title {
+  @include text-left;
   .title-left {
     @include boarder-right-radius(0, 20px);
     background-color: $light-gray;
