--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -66,6 +66,15 @@
   }
 }
 
+.btn-link {
+  color: #37363c;
+  text-decoration: none;
+  background-color: transparent;
+  border: 0;
+  @include padding-right(0);
+  cursor: pointer;
+}
+
 .delete-btn {
   @include transition(all, 0.5s, ease);
   @include opacity(0.6);
