--- a/scss/layouts/setting/_addresses.scss
+++ b/scss/layouts/setting/_addresses.scss
@@ -171,6 +171,7 @@
       text-align: center;
       color: rgba(55, 54, 60, 0.5);
       margin-bottom: 16px;
+      @include text-uppercase;
     }
     Button{
       display: inline-flex !important;
