add server error messages

--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -32,7 +32,7 @@ $dir: rtl;
 //@import "bootstrap-rtl/pagination";
 //@import "bootstrap-rtl/badge";
 //@import "bootstrap-rtl/jumbotron";
-//@import "bootstrap-rtl/alert";
+@import "bootstrap-rtl/alert";
 //@import "bootstrap-rtl/progress";
 @import "bootstrap-rtl/media";
 @import "bootstrap-rtl/list-group";
