--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -32,7 +32,7 @@ $dir: ltr;
 //@import "bootstrap/pagination";
 //@import "bootstrap/badge";
 //@import "bootstrap/jumbotron";
-//@import "bootstrap/alert";
+@import "bootstrap/alert";
 //@import "bootstrap/progress";
 @import "bootstrap/media";
 @import "bootstrap/list-group";
