Search resilt, Details and tires landing

--- a/scss/layouts/_home-details.scss
+++ b/scss/layouts/_home-details.scss
@@ -4,7 +4,8 @@
     margin-top: 50px;
   }
 }
-.swiper-container{
+.tab-pane .swiper-container,
+.main-slider .swiper-container{
   padding-bottom: 20px
 }
 .main-slider{
@@ -83,7 +84,7 @@
 
   }
   .swiper-pagination-bullet{
-    height: 1px;
+    height: 2px;
     width: 10px;
     border-radius: 0;
     @include transition(all, 0.5s, ease);
@@ -354,6 +355,9 @@
         }
         i{
           @include font-size(23px);
+          &:before{
+            top: 3px;
+          }
         }
       }
   }
@@ -496,7 +500,7 @@
     }
     &:last-child{
       a{
-        border-radius: side-values(0 $border-radius-base $border-radius-base 0);
+        border-radius: side-values(0 0 $border-radius-base 0);
         @include media-breakpoint-down(sm){
           border-radius: side-values(0 0 $border-radius-base $border-radius-base);
         }
@@ -627,7 +631,7 @@
   }
 .products-sec{
   @extend .gray-bg;
-  @extend .recommended-product;
+  @extend .products-list;
   padding-top: 50px;
   padding-bottom: 50px;
   margin-top: 50px;
