--- a/scss/state/checkout/_cart.scss
+++ b/scss/state/checkout/_cart.scss
@@ -1,12 +1,9 @@
   .cart-items{
-<<<<<<< HEAD
-     @include border-radius-div;
-=======
     @include border-radius-div;
->>>>>>> 8744b587ba08fe989692dd6694e7bfb8fd4f12f9
     overflow: hidden;
     li{
       padding: 20px 15px;
+      background: $white;
       figure{
         margin-bottom: 0;
       }
@@ -51,24 +48,7 @@
         margin-#{$left}: 2px;
       }
     }
-    .availability{
-      @include font-size(15px);
-      margin-top: -5px;
-      @include media-breakpoint-down(xs){
-        @include font-size(14px);
 
-      };
-      .in-icon{
-        width: 6px;
-        height: 6px;
-        background-color: $green;
-        border-radius: 100px;
-        display: inline-block;
-        margin-right: 5px;
-        position: relative;
-        top: -2px;
-      }
-    }
   }
   .cart-actions{
     .btn-gray{
@@ -94,7 +74,6 @@
     padding-right: 20px;
     padding-left: 20px;
     @include font-size(20px);
-    margin-bottom: 72px;
     i{
       @include font-size(23px);
       margin-#{$left}: 10px;
@@ -110,6 +89,9 @@
   padding-#{$left}: 0;
   @include media-breakpoint-down(md){
     margin-top: 10px;
+    .quantity{
+      margin-top: 10px;
+    }
   }
   h5{
     font-weight: 400;
@@ -203,7 +185,7 @@
       margin-#{$left}: 10px;
       &:before{
         @include font-size(23px);
-        top: 2px;
+        top: 5px;
       }
     }
   }
