--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,6 +14,11 @@ a:active {
 h1{
   @extend .text-uppercase;
 }
+.form-control{
+  &:focus{
+    box-shadow: 0 0 0 0.2rem rgba(237, 64, 54, 0.25);
+  }
+}
 .input{
   border: 0;
   background: $light-gray;
@@ -59,4 +64,15 @@ img{
 }
 .cd-main-content{
   overflow-x: hidden;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active  {
+    -webkit-box-shadow: 0 0 0 30px $light-gray inset !important;
+}
+input:disabled,
+button:disabled{
+  cursor: not-allowed;
 }
