--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -128,8 +128,8 @@
     #{$left}: auto !important;
     #{$right}: 0 !important;
     top: 15px !important;
-    border-top-width: 0;
-    @extend .pb-0;
+    border-width: 0;
+    padding-bottom: 0;
     > h6{
       @extend .px-3;
       color: $basic-gray;
@@ -166,21 +166,22 @@
 }
 .signin-list{
       @extend .mx-3;
-      @extend .px-0;
+      padding-left: 0;
+      padding-right: 0;
       @extend .d-flex;
       @extend .flex-nowrap;
       margin-bottom: 17px;
       li{
-        @extend .d-inline-block;
+        display: inline-block;
         margin-#{$right}: 5px;
         a{
           height: 40px;
           padding-top: 10px;
           padding-bottom: 10px;
-          @extend .text-center;
+          text-align: center;
           min-width: 40px;
           background: $light-gray;
-          @extend .d-block;
+          display: block;
           .icon-facebook{
             @include font-size(19px);
           }
@@ -194,12 +195,14 @@
         }
         &:first-child{
           a{
-            padding-top: 7px;
             @extend .btn-primary;
+            padding-top: 7px;
             white-space: nowrap;
             border-radius: side-values(0 0 0 $border-radius-base) !important;
-            @extend .text-capitalize;
+            text-transform: capitalize;
             @include font-size(18px);
+            padding-left: 15px;
+            padding-right: 15px;
             i{
               @include font-size(17px);
               margin-#{$left}: 3px;
