--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -28,7 +28,7 @@ $dir: ltr;
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
 @import "bootstrap/card";
-//@import "bootstrap/breadcrumb";
+@import "bootstrap/breadcrumb";
 //@import "bootstrap/pagination";
 //@import "bootstrap/badge";
 //@import "bootstrap/jumbotron";
@@ -71,7 +71,6 @@ $dir: ltr;
 @import "../modules/renderField";
 @import "../modules/selectInput";
 @import "../modules/renderFileInput";
-@import "../modules/number_picker";
 @import "../modules/product_grid_view";
 @import "../modules/product_list_view";
 @import "../modules/customer_service";
@@ -114,3 +113,4 @@ $dir: ltr;
 @import "../state/checkout/checkout-shipping";
 @import "../state/checkout/checkout-payment";
 @import "../state/checkout/checkout-order";
+@import "../state/tires.scss";
