fix sideBar arrow, productDetail data coming from the server, and renamed params

--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -122,6 +122,10 @@
   text-transform: uppercase !important;
 }
 
+@mixin text-lowercase {
+  text-transform: lowercase !important;
+}
+
 @mixin text-right {
   text-align: $right !important;
 }
