--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -28,7 +28,7 @@ $dir: rtl;
 @import "bootstrap-rtl/nav";
 @import "bootstrap-rtl/navbar";
 @import "bootstrap-rtl/card";
-//@import "bootstrap-rtl/breadcrumb";
+@import "bootstrap-rtl/breadcrumb";
 //@import "bootstrap-rtl/pagination";
 //@import "bootstrap-rtl/badge";
 //@import "bootstrap-rtl/jumbotron";
@@ -113,3 +113,4 @@ $dir: rtl;
 @import "../state/checkout/checkout-order";
 @import "../state/checkout/checkout-confirmation-order";
 @import "../state/tires.scss";
+@import "../state//add_product";
