--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -113,4 +113,4 @@ $dir: rtl;
 @import "../state/checkout/checkout-order";
 @import "../state/checkout/checkout-confirmation-order";
 @import "../state/tires.scss";
-@import "../state//add_product";
+@import "../state/add_product";
