--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -112,4 +112,4 @@ $dir: ltr;
 @import "../state/checkout/checkout-order";
 @import "../state/tires.scss";
 @import "../state/checkout/checkout-confirmation-order";
-@import "../state//add_product";
+@import "../state/add_product";
