--- a/scss/state/checkout/_checkout-shipping.scss
+++ b/scss/state/checkout/_checkout-shipping.scss
@@ -141,8 +141,14 @@
           .select__value-container {
             height: 34px;
           }
+          .select__control {
+            padding-top: 15px;
+          }
         }
         .div-rounded-first{
+          @include small-screen {
+            margin-bottom: 20px;
+          }
           .RenderField{
             border: none;
             input{
@@ -164,6 +170,9 @@
           }
         }
         .div-rounded{
+          @include small-screen {
+            margin-bottom: 20px;
+          }
           @include padding-left(5px);
           @include padding-right(5px);
         }
@@ -213,6 +222,7 @@
           }
         }
         .shipping-style{
+          margin-top: 25px;
           margin-bottom: 20px;
           .form-control{
             padding-bottom: 20px;
