--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -31,8 +31,8 @@
 @mixin link-border-radius {
   border-radius: corner-values(0 20px 20px 20px) !important;
 }
-@mixin box-shadow{
-  box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
+@mixin box-shadow {
+  box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07) !important;
 }
 @mixin rounded-rectangle {
   border-radius: corner-values(20px 0 20px 20px) !important;
