done with the setting/quotation page

--- a/scss/state/_quotations.scss
+++ b/scss/state/_quotations.scss
@@ -1,4 +1,7 @@
 .Quotations-container {
+    header {
+        display: block !important;
+    }
     .nav-tabs {
         margin-bottom: 20px;
         .nav-item {
