--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -596,7 +596,7 @@
           width: 6px;
           height: 12px;
           border: 2px solid $brand-color;
-          border-#{$left}: none;
+          border-left: none;
           border-top: none;
           content: " ";
           position: absolute;
