--- a/scss/layouts/_search_result.scss
+++ b/scss/layouts/_search_result.scss
@@ -1,4 +1,5 @@
 .filter-col{
+  @include text-left;
   @extend .col-lg-3;
   max-width: 300px;
 
@@ -648,6 +649,7 @@
   }
 }
 .filte-items{
+  @include text-left;
   position: fixed;
   height: 100%;
   top: 0;
