--- a/scss/layouts/_search_result.scss
+++ b/scss/layouts/_search_result.scss
@@ -358,6 +358,8 @@
 }
 .filter-result{
   padding: 15px 15px 5px;
+  width: 100%;
+  @include text-left;
   ul{
     display: inline-block;
     margin-bottom: 0;
@@ -370,7 +372,7 @@
   }
   li{
     border:1px solid rgba(55, 54, 60, 0.3);
-    padding: corner-values(5px 15px 5px 10px);
+    padding: 5px 15px 5px 10px;
     text-transform: capitalize;
     @include font-size(14px);
     position: relative;
