fix the cd-primary-nav arabic issue. Fix andriod focus issue as well

--- a/scss/layouts/_home-details.scss
+++ b/scss/layouts/_home-details.scss
@@ -672,6 +672,9 @@
       border-#{$right}-width: 0;
     }
   }
+  .tab-content {
+    @include text-left;
+  }
   .nav, .nav-tabs{
     @include padding-left(0);
     margin-bottom: 25px;
