fix iphone sidebar click issue. Fix text showing for cat in Arabic

--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -31,12 +31,12 @@
     overflow-x: hidden;
     @include if-rtl {
       right: 0;
-      left: auto;
+      #{$left}: auto;
       top: 0;
       width: 260px;
       & ul {
         right: 0;
-        left: auto;
+        #{$left}: auto;
         top: 0;
         width: 260px;
       }
@@ -207,7 +207,7 @@ ul.cd-secondary-nav {
       padding-#{$left}: 35px;
       &::before,
       &::after {
-        left: 15px;
+        #{$left}: 15px;
       }
     }
   }
@@ -229,6 +229,10 @@ ul.cd-secondary-nav {
     max-width: 200px;
     width: 107px;
     margin-top: 2px;
+    @include if-rtl{
+      position: relative;
+      left: 64px;
+    }
     @include nav-sm-media {
       margin-top: 8px;
       width: 100%;
@@ -240,7 +244,7 @@ ul.cd-secondary-nav {
   transform: translateY(-65px);
   transition: transform 0.5s ease-out;
   .cd-nav {
-    padding-left: 30px;
+    padding-#{$left}: 30px;
   }
   .scroll-dwon-brand {
     @include opacity(1);
@@ -254,7 +258,7 @@ ul.cd-secondary-nav {
     transition: transform 0.3s ease-out;
   }
   .cd-nav {
-    padding-left: 0;
+    padding-#{$left}: 0;
   }
 }
 //overlay-lg
@@ -265,7 +269,7 @@ ul.cd-secondary-nav {
   height: 100%;
   width: 100%;
   top: 0;
-  left: 0;
+  #{$left}: 0;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.5);
   visibility: hidden;
@@ -315,7 +319,7 @@ ul.cd-secondary-nav {
   #{$left}: auto;
   top: 60px;
   .form-control {
-    border-top-left-radius: 0 !important;
+    border-top-#{$left}-radius: 0 !important;
   }
 }
 .user-account-sm {
