--- a/public/css/mega-nav.css
+++ b/public/css/mega-nav.css
@@ -830,7 +830,14 @@ Main components
   transition: opacity 0.3s 0s, visibility 0s 0s, transform 0.3s 0s;
 }
 @media only screen and (max-width: 1169px) {
-  .nav-on-left .cd-overlay.is-visible, .cd-overlay.is-visible {
+  .cd-overlay.is-visible {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  }
+  .nav-on-left .cd-overlay.is-visible {
     -webkit-transform: translateX(260px);
     -moz-transform: translateX(260px);
     -ms-transform: translateX(260px);
