--- a/scss/layouts/_home-details.scss
+++ b/scss/layouts/_home-details.scss
@@ -425,7 +425,7 @@
       figcaption{
         @extend .position-absolute;
         top: 50%;
-        #{$left}: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
         width: 100%;
         text-align: center;
