--- a/scss/layouts/_result-not-found.scss
+++ b/scss/layouts/_result-not-found.scss
@@ -2,18 +2,20 @@
   margin-top: 70px;
   .no-result{
     margin-bottom: 70px;
-    text-align: center;
+    width: -webkit-fill-available;
+    justify-content: center;
     background: $light-gray;
     border-radius: side-values(0 0 20px 0);
     display: inline-flex;
-    padding: 30px 15% 30px 30%;
+    padding: 30px 0 30px 0;
+    @include margin-right(20%);
+
     img{
       width: 97px;
       height: 98px;
     }
     .sec-header{
       margin-bottom: 0px;
-      @include margin-left(5px);
       h1{
         font-family: Roboto;
         @include font-size(50px);
@@ -24,6 +26,8 @@
         letter-spacing: normal;
         text-align: $left;
         color: rgb(55, 54, 61);
+        @include margin-left(10px);
+        margin-top: 5px;
       }
       span{
         span{
@@ -41,9 +45,9 @@
     border-bottom: 1px solid #ed4036;
     }
     .btn-primary{
-      @include margin-left(10px);
       margin-top: 20px;
       height: 55px;
+      @include margin-left(10px);
     }
   }
 }
