--- a/scss/layouts/_result-not-found.scss
+++ b/scss/layouts/_result-not-found.scss
@@ -50,4 +50,9 @@
       @include margin-left(10px);
     }
   }
+@media (max-width: 1199.98px) {
+  .artical-space,.sec-header {
+   margin-bottom: 30px;
+}
+}
 }
