--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -107,6 +107,7 @@ $dir: rtl;
 @import "../layouts/setting/payment";
 @import "../layouts/setting/addresses";
 @import "../layouts/setting/side-bar";
+@import "../layouts/result-not-found";
 
 @import "../state/checkout/checkout-shipping";
 @import "../state/checkout/checkout-payment";
